--- a/code/Project.ipynb
+++ b/code/Project.ipynb
@@ -25,17 +25,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**It contains:**\n",
-    "- *Information, guidelines*\n",
-    "- *Imports of many useful packages*\n",
-    "- *Some functions which can be used for preprocessing, image loading and image visualization.*\n",
-    "- *A potential structure for the project*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Here is a guideline for the project that can be (but not has to be!) considered and may be helpful:**\n",
     "\n",
     "Preliminary EDA & data cleaning:\n",
@@ -71,24 +60,6 @@
     "-\tPlot training and validation process\n",
     "-\tLog training history\n",
     "-\tPlot Confusion matrix"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Keep in mind when working with jupyter notebooks:**\n",
-    "- Come up with a clear and concise structure of your project\n",
-    "- Comment your working steps by changing the cell to Markdown\n",
-    "- Use blocks for single code logic (at least try to)\n",
-    "- Include plots & other visualizations; this is the advantage of using notebooks!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "But most importantly... happy coding! &#128512;"
    ]
   },
   {
@@ -223,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -237,9 +208,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
