--- a/code/Project.ipynb
+++ b/code/Project.ipynb
@@ -169,7 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loading of files\n"
+    "# Loading of files\n",
+    "# read.csv"
    ]
   },
   {
