--- a/code/BME_342_final_project_template.ipynb
+++ b/code/BME_342_final_project_template.ipynb
@@ -189,8 +189,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Initialize Notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import helper as hp \n",
+    "hp.initialize_notebook() # initialize with GPU enabled  \n",
+    "# hp.initialize_notebook(False) # to disable GPU "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Load & preprocess images"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## EDA & Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -223,7 +255,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -237,9 +269,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
