--- a/code/Keras-ResNet-tutorial.ipynb
+++ b/code/Keras-ResNet-tutorial.ipynb
@@ -416,7 +416,7 @@
     "\n",
     "    # output layer\n",
     "    X = Flatten()(X)\n",
-    "    X = Dense(classes, activation='softmax', name='fc' + str(classes), kernel_initializer = glorot_uniform(seed=0))(X)\n",
+    "    X = Dense(classes, activation='sigmoid', name='fc' + str(classes), kernel_initializer = glorot_uniform(seed=0))(X)\n",
     "    \n",
     "    # Create model\n",
     "    model = Model(inputs = X_input, outputs = X, name='ResNet50')\n",
@@ -453,7 +453,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])"
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])"
    ]
   },
   {
@@ -3033,7 +3033,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3047,9 +3047,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
