--- a/code/ModelArchitecture/ResNet/ResNet_Working.ipynb
+++ b/code/ModelArchitecture/ResNet/ResNet_Working.ipynb
@@ -24,7 +24,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "931d2ee7-86e4-47e3-a404-20aee57a5b83",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
