Update to universal pathspec

--- a/code/ModelArchitecture/ResNet/F_Score.ipynb
+++ b/code/ModelArchitecture/ResNet/F_Score.ipynb
@@ -192,8 +192,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images_dir = '/home/jupyter-luvogt/Final_Project_LR/IMC_images' \n",
-    "metadata_dir = '/home/jupyter-luvogt/Final_Project_LR/metadata.csv'\n",
+    "images_dir = '../../../IMC_images' \n",
+    "metadata_dir = '../../../metadata.csv'\n",
     "# --- Load CSV and filter dataset ---\n",
     "csv_file = metadata_dir\n",
     "image_folder = images_dir\n",
