--- a/code/ModelArchitecture/ResNet/ResNet_Working.ipynb
+++ b/code/ModelArchitecture/ResNet/ResNet_Working.ipynb
@@ -153,8 +153,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images_dir = '/home/jupyter-luvogt/Final_Project_LR/IMC_images' \n",
-    "metadata_dir = '/home/jupyter-luvogt/Final_Project_LR/metadata.csv'\n",
+    "images_dir = '../../../IMC_images' \n",
+    "metadata_dir = '../../../metadata.csv'\n",
     "# --- Load CSV and filter dataset ---\n",
     "csv_file = metadata_dir\n",
     "image_folder = images_dir\n",
@@ -544,8 +544,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     }
    },
    "outputs": [
@@ -667,11 +666,7 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "a4aebb33-b899-490f-bc92-dec3aaa29e95",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import pickle\n",
