--- a/code/ModelArchitecture/ResNet/Visualization.ipynb
+++ b/code/ModelArchitecture/ResNet/Visualization.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "6a0bd758-828f-492f-b660-96621b7ed0b8",
    "metadata": {},
    "outputs": [
@@ -19,45 +19,52 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting visualkeras\n",
-      "  Downloading visualkeras-0.1.4-py3-none-any.whl.metadata (11 kB)\n",
-      "Collecting pillow>=6.2.0 (from visualkeras)\n",
-      "  Downloading pillow-11.0.0-cp312-cp312-manylinux_2_28_x86_64.whl.metadata (9.1 kB)\n",
+      "Requirement already satisfied: visualkeras in /home/jupyter-rohimm/.local/lib/python3.12/site-packages (0.1.4)\n",
+      "Requirement already satisfied: pydot in /home/jupyter-rohimm/.local/lib/python3.12/site-packages (3.0.3)\n",
+      "Requirement already satisfied: graphviz in /home/jupyter-rohimm/.local/lib/python3.12/site-packages (0.20.3)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /home/jupyter-rohimm/.local/lib/python3.12/site-packages (from visualkeras) (11.0.0)\n",
       "Requirement already satisfied: numpy>=1.18.1 in /opt/tljh/user/lib/python3.12/site-packages (from visualkeras) (2.1.3)\n",
-      "Collecting aggdraw>=1.3.11 (from visualkeras)\n",
-      "  Downloading aggdraw-1.3.19-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (655 bytes)\n",
-      "Downloading visualkeras-0.1.4-py3-none-any.whl (17 kB)\n",
-      "Downloading aggdraw-1.3.19-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.0 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.0/1.0 MB\u001b[0m \u001b[31m8.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading pillow-11.0.0-cp312-cp312-manylinux_2_28_x86_64.whl (4.4 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.4/4.4 MB\u001b[0m \u001b[31m30.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: pillow, aggdraw, visualkeras\n",
-      "Successfully installed aggdraw-1.3.19 pillow-11.0.0 visualkeras-0.1.4\n"
+      "Requirement already satisfied: aggdraw>=1.3.11 in /home/jupyter-rohimm/.local/lib/python3.12/site-packages (from visualkeras) (1.3.19)\n",
+      "Requirement already satisfied: pyparsing>=3.0.9 in /home/jupyter-rohimm/.local/lib/python3.12/site-packages (from pydot) (3.2.0)\n"
      ]
     }
    ],
    "source": [
-    "!pip install visualkeras"
+    "!pip install visualkeras pydot graphviz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "b48cea76-f2a1-4f1d-a17b-2eb8b2bd8d6d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-12-18 22:10:47.173585: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-12-18 22:10:47.188043: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-12-18 22:10:47.192538: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-12-18 22:10:47.204082: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "# imports\n",
     "import keras\n",
     "import os\n",
     "import tensorflow as tf\n",
     "import visualkeras\n",
-    "from PIL import ImageFont"
+    "from PIL import ImageFont\n",
+    "from keras.utils import plot_model\n",
+    "import pydot, graphviz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "5b04a23f-81e7-4399-9d6e-0b80acc05fea",
    "metadata": {},
    "outputs": [],
@@ -82,7 +89,21 @@
     "    if save:\n",
     "        visualkeras.layered_view(loaded_model, scale_xy = scale_xy, max_z = max_z, spacing = spacing, legend=legend, font=font, to_file=output_path).show()\n",
     "    else:\n",
-    "        visualkeras.layered_view(loaded_model, scale_xy = scale_xy, max_z = max_z, spacing = spacing, legend=legend, font=font).show()"
+    "        visualkeras.layered_view(loaded_model, scale_xy = scale_xy, max_z = max_z, spacing = spacing, legend=legend, font=font).show()\n",
+    "\n",
+    "def graph_model(model_name, save = False):\n",
+    "\n",
+    "    # Setup Paths\n",
+    "    model_path = os.path.join(\"models_ResNet\", model_name)\n",
+    "    output_path = os.path.join(\"visualizations\", f\"{model_name.split(\".\")[0]}_graph.png\")\n",
+    "    loaded_model = keras.saving.load_model(model_path)\n",
+    "\n",
+    "    \n",
+    "    # Generate Image\n",
+    "    if save:\n",
+    "        plot_model(loaded_model, to_file='model_plot.png', show_shapes=True, show_layer_names=True)\n",
+    "    else:\n",
+    "        plot_model(loaded_model, show_shapes=True, show_layer_names=True)"
    ]
   },
   {
@@ -104,6 +125,51 @@
    ],
    "source": [
     "draw_model(\"model_ResNet18_3_dropout_callbacks_sigmoid_biological_channels_neurons_trained.keras\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa71bffc-5431-4ba3-881b-990bc9ad3e95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_ResNet18_3_dropout_callbacks_sigmoid_biological_channels_trained"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0ad919d8-4437-4007-8e7f-00d32ecea5c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1734559857.016595  606501 cuda_executor.cc:1015] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "I0000 00:00:1734559857.058419  606501 cuda_executor.cc:1015] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "I0000 00:00:1734559857.062098  606501 cuda_executor.cc:1015] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "I0000 00:00:1734559857.067895  606501 cuda_executor.cc:1015] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "I0000 00:00:1734559857.071623  606501 cuda_executor.cc:1015] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "I0000 00:00:1734559857.075199  606501 cuda_executor.cc:1015] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "I0000 00:00:1734559857.283686  606501 cuda_executor.cc:1015] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "I0000 00:00:1734559857.285896  606501 cuda_executor.cc:1015] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "I0000 00:00:1734559857.287939  606501 cuda_executor.cc:1015] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2024-12-18 22:10:57.289912: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2021] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 13764 MB memory:  -> device: 0, name: Tesla T4, pci bus id: 0000:00:06.0, compute capability: 7.5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You must install graphviz (see instructions at https://graphviz.gitlab.io/download/) for `plot_model` to work.\n"
+     ]
+    }
+   ],
+   "source": [
+    "graph_model(\"model_ResNet18_3_dropout_callbacks_sigmoid_biological_channels_trained.keras\")"
    ]
   }
  ],
