--- a/code/ModelArchitecture/ResNet/Failed_ResNet/ResNet18_Trianed_ImageNet.ipynb
+++ b/code/ModelArchitecture/ResNet/Failed_ResNet/ResNet18_Trianed_ImageNet.ipynb
@@ -549,7 +549,11 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "31f82817-9124-4d5d-9497-d1b7aa762b05",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
