--- a/code/Model Architecture/ResNet/BalancedDataSet.ipynb
+++ b/code/Model Architecture/ResNet/BalancedDataSet.ipynb
@@ -186,8 +186,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images_dir = '/home/jupyter-luvogt/Final_Project_LR/IMC_images' \n",
-    "metadata_dir = '/home/jupyter-luvogt/Final_Project_LR/metadata.csv'\n",
+    "images_dir = '../../../IMC_images' \n",
+    "metadata_dir = '../../../metadata.csv'\n",
     "# --- Load CSV and filter dataset ---\n",
     "csv_file = metadata_dir\n",
     "image_folder = images_dir\n",
@@ -1067,7 +1067,7 @@
    "outputs": [],
    "source": [
     "# channel_names_new = [\"Gd160\", \"Eu153\", \"Gd155\", \"Nd142\", \"Nd146\", \"Er166\", \"Er170\", \"Yb171\", \"Yb173\", \"Yb174\"]\n",
-    "panel_dir = '/home/jupyter-luvogt/Final_Project_LR/panel.csv' \n",
+    "panel_dir = '../../../panel.csv' \n",
     "panel_df = pd.read_csv(panel_dir)\n",
     "channel_names = dict(zip(panel_df['clean_target'].to_list(), panel_df['channel'].to_list()))\n",
     "channel_names_new = [x for x in list(channel_names.values()) if x not in [\"Xe131\", \"Xe134\", \"Ba138\", \"Y89\", \"In113\", \"In115\", \"Ir191\", \"Ir193\"]]\n"
