--- a/code/Model Architecture/ResNet/F_Score.ipynb
+++ b/code/Model Architecture/ResNet/F_Score.ipynb
@@ -823,11 +823,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "f1607308-8720-4c4a-9de8-4f29f537ac72",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Callbacks\n",
@@ -869,11 +865,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "7bd22828-a61a-40ef-8182-b28dd520066e",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#  Disable for F1_score / Sigmoid \n",
@@ -895,11 +887,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "82ab9bab-f565-4dce-afdc-97e0d6a19fe0",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def identity_block(x, filter, dropout_rate = 0.5):\n",
@@ -998,8 +986,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     },
     "scrolled": true
    },
