--- a/code/Model Architecture/ResNet/ResNet_Working.ipynb
+++ b/code/Model Architecture/ResNet/ResNet_Working.ipynb
@@ -309,11 +309,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "a52950d6-decb-4009-9788-21fc4f22d520",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from keras.regularizers import l2\n",
@@ -406,8 +402,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     }
    },
    "outputs": [
@@ -689,11 +684,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "610e88cc-d3c6-40c2-98d1-f39c1638d3ec",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Callbacks\n",
@@ -728,11 +719,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "53f78d2f-35e0-4636-bc5c-1aa0535feb66",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ROWS = 224\n",
@@ -811,11 +798,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "8d773db4-2ff8-428c-a301-e5a1e52ef3b8",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import pickle\n",
@@ -846,11 +829,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "44db92f7-d88f-4b3b-b39d-37fa28583602",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def identity_block(x, filter, dropout_rate = 0.5):\n",
@@ -935,11 +914,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "42af721f-0a70-43e3-9aa8-12ddf1562b53",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Callbacks\n",
