--- a/code/Model Architecture/ResNet/t-SNE_unprocessed_images.ipynb
+++ b/code/Model Architecture/ResNet/t-SNE_unprocessed_images.ipynb
@@ -139,8 +139,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images_dir = '/home/jupyter-luvogt/Final_Project_LR/IMC_images' \n",
-    "metadata_dir = '/home/jupyter-luvogt/Final_Project_LR/metadata.csv'\n",
+    "images_dir = '../../../IMC_images' \n",
+    "metadata_dir = '../../../metadata.csv'\n",
     "# --- Load CSV and filter dataset ---\n",
     "csv_file = metadata_dir\n",
     "image_folder = images_dir\n",
@@ -290,7 +290,7 @@
    "source": [
     "channel_names_new = [\"Gd160\", \"Eu153\", \"Gd155\"]\n",
     "\n",
-    "panel_dir = '/home/jupyter-luvogt/Final_Project_LR/panel.csv' \n",
+    "panel_dir = '../../../panel.csv' \n",
     "panel_df = pd.read_csv(panel_dir)\n",
     "channel_names = dict(zip(panel_df['clean_target'].to_list(), panel_df['channel'].to_list()))"
    ]
